# envanter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  test_types.py  tests.py  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
docs/: requirements.txt
docs/source/: api-reference.rst  conf.py  index.rst  install.rst  usage.rst
envanter/: __init__.py
src/envanter/: __init__.py
tests/: test_parser.py
