[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envanter"
version = "1.2.1"
description = "Yet another environment parser."
readme = "README.md"
authors = [{ name = "suayip uzulmez", email = "suayip.541@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["env", "envparse", "environment", "environment-parser"]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/realsuayip/envanter"
"Bug Tracker" = "https://github.com/realsuayip/envanter/issues"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
]
target-version = "py310"
line-length = 88

[tool.ruff.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
