[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "envanter"
version = "1.2.1"
description = "Yet another environment parser."
readme = "README.md"
authors = [{ name = "şuayip üzülmez", email = "suayip.541@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["env", "envparse", "environment", "environment-parser"]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/realsuayip/envanter"
"Bug Tracker" = "https://github.com/realsuayip/envanter/issues"

[dependency-groups]
dev = [
    "ty",
    "mypy",
    "tox",
    "tox-uv",
]
docs = [
    "docstrfmt",
    "sphinx",
    "furo",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
]
fixable = ["I"]
ignore = ["B904", "RUF012"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
strict = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313

[testenv]
deps =
    mypy
commands =
    python -m unittest
    mypy src/ tests/
"""
